<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Support Library Demo</string>
    <string name="menu_settings">Settings</string>
    <string name="drawer_title_calendar">Agenda</string>
    <string name="drawer_title_categories">Categorias</string>
    <string name="drawer_title_playlists">Playlists</string>
    <string name="drawer_title_chats">Bate Papo</string>
    <string name="drawer_title_app">App</string>
    <string name="drawer_title_settings">Configurações</string>
    <string name="drawer_title_feedback">Feedback</string>

</resources>
