<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/drawer_title_categories"/>
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_event"
            android:title="@string/drawer_title_calendar"/>
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_headset"
            android:title="@string/drawer_title_playlists"/>
        <item
            android:id="@+id/nav_discussion"
            android:icon="@drawable/ic_forum"
            android:title="@string/drawer_title_chats"/>
    </group>

    <item android:title="@string/drawer_title_app">
        <menu>
            <item
                android:icon="@drawable/ic_dashboard"
                android:title="@string/drawer_title_settings"/>
            <item
                android:icon="@drawable/ic_dashboard"
                android:title="@string/drawer_title_feedback"/>
        </menu>
    </item>

</menu>
